# gal

./: .gitmodules  CMakeLists.txt  README.md
include/gal/: gal.hpp  inputs.hpp  window.hpp
src/: window.cpp
